Ported code to Java 25